# risc0-merkle-integration

./: README.md
apps/: Cargo.toml  README.md  config.yaml
apps/src/: input.rs
contracts/: MerkleRoot.sol  README.md
methods/: README.md
methods/guest/: Cargo.toml
methods/guest/src/: input.rs
script/: Deploy.s.sol
