[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "merkle"
path = "src/bin/merkle.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.6" }
risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "thin"
